--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ padding: 0;
 
 
 #allouache{ 
-    background: url(images/Fashion_stylists.jpg);
+    background: url(images/allouache.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
