--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
 padding: 0;
+
 }
 
 
@@ -63,6 +64,7 @@ padding: 0;
     position: relative;
     z-index: 1;
     transition: color 0.5s;
+    border-radius: 24px;
 
    
     
@@ -77,6 +79,7 @@ padding: 0;
     background: #fff;
     z-index: -1;
     transition: 0.5s;
+    border-radius: 24px;
  
 }
 .allouache-btn a:hover span{
