--- a/style.css
+++ b/style.css
@@ -1,16 +1,95 @@
 *{
+    padding: 0;
     margin: 0;
-padding: 0;
-
-}
-
-
-#allouache{ 
-    background: url(images/allouache.jpg);
+  }
+  
+  
+  
+  #allouache { 
+    height: 100vh;
+    position: relative;
+  }
+  
+  #allouache::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-size: cover;
     background-position: center;
-    height: 100vh;
-}
+    z-index: -1;
+    animation: change-background 180s linear infinite;
+  }
+  
+   @keyframes change-background {
+    0% {
+      background-image: url(images/allouache-10.jpg);
+    }
+    5% {
+      background-image: url(images/Fashion_stylists.jpg);
+    }
+    10% {
+      background-image: url(images/allouache-8.webp);
+    }
+    15% {
+      background-image: url(images/allouache-7.jpg);
+    }
+    20% {
+      background-image: url(images/allouache-3.jpg);
+    }
+    25% {
+      background-image: url(images/amigo-2.jpg);
+    }
+    30% {
+      background-image: url(images/tim-mossholder-q49oU8NeOHQ-unsplash.jpg);
+    }
+    35% {
+      background-image: url(images/jongar.jpg);
+    }
+    40% {
+      background-image: url(images/andre-reis-1_DAlXy0wng-unsplash.jpg);
+    }
+    45% {
+      background-image: url(images/allouache-21.webp);
+    }
+    50% {
+      background-image: url(images/andrea-donato-2LEqbbP5OZI-unsplash.jpg);
+    }
+    55% {
+      background-image: url(images/andrea-donato-MNu0n-3BIKs-unsplash.jpg);
+    }
+    60% {
+      background-image: url(images/allouache-22.avif);
+    }
+    65% {
+      background-image: url(images/chris-knight-_H1XXY96pqw-unsplash.jpg);
+    }
+    70% {
+      background-image: url(images/allouache-23.jpg);
+    }
+    75% {
+      background-image: url(images/gregory-hayes-AjJsc0hk9s0-unsplash.jpg);
+    }
+    80% {
+      background-image: url(images/hamid-tajik-nHLq_Tr7pYw-unsplash.jpg);
+    }
+    85% {
+      background-image: url(images/mohamad-khosravi-XedxN-f1CmE-unsplash.jpg);
+    }
+    90% {
+      background-image: url(images/allouache-19.jpg);
+    }
+    95% {
+      background-image: url(images/allouache.jpg);
+    }
+    100% {
+      background-image: url(images/allouache-10.jpg);
+    }
+  }
+  
 .logo{
     width: 140px;
     position: absolute;
@@ -567,11 +646,3 @@ hr{
     border: 1px solid #1a73e8;
 
 }
-
-.social-links .fa-youtube-play{
-    background-color: white;
-    color: red; 
-    border: 1px solid #1a73e8;
-
-}
-   
